full remake. file integrity. error handling

--- a/config/config.ini
+++ b/config/config.ini
@@ -10,3 +10,6 @@ interval = 1d
 symbols = AAPL, GOOGL, MSFT, BTC-USD
 period = 10y
 interval = 1d
+
+[METADATA]
+filepath = data/meta/last_date_per_symbol.json
