--- a/config/config.ini
+++ b/config/config.ini
@@ -2,7 +2,7 @@
 filepath = ta_params.csv
 
 [BACKFILL]
-symbols = BTC-USD, XRP-USD
+symbols = DOGE-USD, ADA-USD, TRX-USD, LINK-USD
 period = 10y
 interval = 1d
 
